tests/output_terminal/test_variable_redclaration_output.txt
    short x;
          ^ Already exists
Error on line 3 (column 11): Variable already exists on this scope.

Process finished with exit code 0
